--- a/中文文档/波场协议/机制说明.md
+++ b/中文文档/波场协议/机制说明.md
@@ -1,20 +1,29 @@
-## 如何创建账户
+# 创建账户
 
-不允许直接创建账户，只能通过向不存在的账户转账来创建账户。向不存在的账户转账，转账金额**最少1TRX**。
+您可以随意注册离线密钥对（包含地址和私钥），但是这个密钥对不会被TRON网络记录。
+要想使这个密钥对成为TRON网络中的账户，需要其他已经存在于TRON网络的账户给这个地址转账，且转账金额**最少1TRX**。
+转账成功后，您就可以在TRON网络中查询到地址对应的账户的信息了。
  
-## 申请成为超级代表规则
+# 申请成为超级代表规则
 
-申请成为超级代表账户，需要消耗**100,000TRX**，这部分资金直接烧掉。
+任何账户都可以申请成为超级代表账户。但是为了防止恶意攻击，这也是需要一定代价的。TRON网络将直接烧掉申请者账户**100,000TRX**。
+申请成功后，您就可以竞选超级代表了。
 
-## 如何冻结/解冻资金
+# 冻结/解冻资金
 
-冻结资金后，将获得对应数量的股权及带宽，股权可以用来投票，带宽用于交易。股权及带宽的使用及计算规则在后文中介绍。
+## 为什么要冻结资金
+设置冻结资金的机制有2个出发点：
+- 防止恶意的垃圾交易阻塞网络，造成交易确认缓慢的问题
+- 防止恶意投票
 
-冻结操作后，冻结的资金将从账户Balance中转移到Frozen，在解冻后由Frozen转移回Balance，该冻结的资金无法用于交易。
+## 冻结/解冻机制
+冻结资金后，你将获得对应数量的股权(stake)及带宽(bandwidth)。股权可以用来投票，带宽用于交易。股权及带宽的使用及计算规则在后文中介绍。
+
+冻结的资金会进入你的冻结账户，无法用于交易。
 
 当临时需要更多的股权或带宽时，可以追加冻结资金，从而获取追加部分的股权与带宽。此时解冻时间推迟到最后一次冻结操作的3天后。
 
-在冻结时间过后，可以解冻资金。
+冻结时间固定为3天，你可以在3天以后的任意时间手动解冻，将该笔资金赎回到你的账户当中。
 
 + 冻结命令如下：
  
@@ -32,17 +41,19 @@ time：冻结时间，冻结资金到解冻资金的时间为3天。
 
     `unfreezebalance password`
 
-## 如何奖励出块及获取奖励
+# 超级代表奖励出块
 
-每次出块完成后，出块奖励发到账户的allowance中，每**24h**允许一次提取操作。从allowance转移到balance中，allowance中资金不允许锁定、交易。可以通过查询账户信息，查看冻结、奖励信息。
+超级代表每次出块完成后，出块奖励都会发到超级账本的子账号当中，超级代表不能直接使用这部分资产，但可以查询。
+每**24h**允许一次提取操作。从该子账号转移到超级代表的账户中。
 
-## 如何投票
+# 选举超级代表
 
-投票需要股权，股权可以通过冻结资金获得。
+TRON网络中的每一个账户都具有选举权，可以通过投票选出自己认同的超级代表。
+投票需要股权(stake)，你的股权的多少由当前冻结资金决定。
 
-股权的计算方法是：每冻结**1TRX**，就可以获得**1单位股权**。
+股权的计算方法：每冻结**1TRX**，就可以获得**1单位股权**。
 
-在解冻后，以前的投票会失效。可以通过重新冻结并投票来避免投票失效。
+在解冻后，你没有了冻结的资产，相应地失去了所有的股权，因此以前的投票会失效。你可以通过重新冻结并投票来避免投票失效。
 
 **注意:** 波场网络只记录你最后一次投票的状态，也就是说你的每一次投票都会覆盖以前所有的投票效果。
 
@@ -56,16 +67,17 @@ votewitness 123455 witness1 10 // 给witness1投了10票
 以上命令的最终结果是给witness1投了10票，给witness2投了0票
 ```
 
-## 如何计算带宽
+# 带宽
 
-带宽的计算规则是：锁定资金 * 天数 * 常数 ，
+过多的无关紧要的交易会造成类似于以太坊的网络拥堵，从而使得交易确认时间延迟。
+为了避免阻塞网络，TRON网络允许每个账户**10s**免费发起一次交易，更高的交易频率则需要消耗带宽。带宽和股权一样，通过冻结资金来获取。
 
-假设冻结1TRX（1,000,000 DROP），时间为3天，带宽=1,000,000 * 3 * 1 = 3,000,000.
+带宽的计算规则是：锁定资金 * 天数 * 常数 ，注意锁定资金的单位为drop，当前常数为1。例如：
 
-任何合约都需要消耗带宽，包括转账、转移资产、投票、冻结等，查询不消耗带宽，每个合约需要消耗100,000个带宽。
+假设冻结1TRX（1,000,000 DROP），固定冻结时间为3天，带宽=1,000,000 * 3 * 1 = 3,000,000.
 
-如果距离上次合约超过一定时间（**10s**），本次执行不消耗带宽。  
-
-发生解冻操作时，带宽不会清空，下次冻结时，新增加的带宽进行累加。
+除了查询操作，任何交易频率大于10s一次的合约都需要消耗带宽，包括转账、转移资产、投票、冻结等，每个合约需要消耗100,000个带宽。
+  
+**注意** 发生解冻操作时，带宽不会清空，下次冻结时，新增加的带宽进行累加。
 
 
