mdf Mechanism_Introduction

--- a/中文文档/波场协议/机制说明.md
+++ b/中文文档/波场协议/机制说明.md
@@ -80,4 +80,16 @@ votewitness 123455 witness1 10 // 给witness1投了10票
   
 **注意** 发生解冻操作时，带宽不会清空，下次冻结时，新增加的带宽进行累加。
 
+# 发行资产
+
+在TRON网络，每个账户都可以轻松便捷地发行资产。发行资产的时候可以对多笔资产锁仓。
++ 示例：
+
+```
+assetissue 123456 abc 1000000 1 1 2018-5-31 2018-6-30 abcdef a.com 200000 180 300000 365 
+
+以上命令的发行了名为abc的资产，发行总量为100万，abc与TRX的兑换比例为1:1，发行日期为2018-5-31至2018-6-30。
+其中20万锁仓180天，30万锁仓365天。
+```
+
 
