--- a/中文文档/波场协议/机制说明.md
+++ b/中文文档/波场协议/机制说明.md
@@ -78,7 +78,9 @@ Justin的计算规则是：锁定资金 * 天数 * 常数 ，当前常数为1，
 
 除了查询操作，任何交易频率大于10s一次的合约都需要消耗Justin，包括转账、转移资产、投票、冻结等，每个合约需要消耗100个Justin。
 
-注意 发生解冻操作时，Justin不会清空，下次冻结时，新增加的Justin进行累加。
+**注意** 
+1. 发生解冻操作时，Justin不会清空，下次冻结时，新增加的Justin进行累加。
+2. 转token时，由token发行者制定Justin的消耗规则
 
 ## 发行资产
 
